# step-devices

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
cmake/: CMSISDeviceWB.cmake  README.md  arm-none-eabi-gcc.cmake  stm32cubewb_files.cmake  stm32cubewb_setup.cmake  stm32wb55xx.cmake
config/: stm32wbxx_hal_conf.h
dependencies/: CMakeLists.txt
dependencies/cmsis_core/: CMakeLists.txt
dependencies/cmsis_device_wb/: CMakeLists.txt
dependencies/stm32cubewb/: CMakeLists.txt  freertos_files.cmake  hal_files.cmake
docs/: _config.yml  index.md  kicad.md
docs/_data/: navigation.yml
docs/_includes/: nav.html  recursive_nav.html
docs/_layouts/: default.html
docs/_plugins/: subnav.rb
parts/: README.md  STEP_Symbols.kicad_sym
parts/step_3DModels/: STM32WB55CEU6TR.step
parts/step_3DModels/ring_parts/: ANT.step  CSD17318Q2T.step  LGA-14L_2P5X3X0P83_STM.step  MLPF-WB55-01E3_STM.step  NX1612SA-32.000MHZ-CHP-CIS-3.step  tps62840dlcr.stp
parts/step_footprints.pretty/: ANT016008LCS2442MA2.kicad_mod  AOCA32116E.kicad_mod  LSM6DSO32TR.kicad_mod  MLPF-WB55-01E3.kicad_mod  OSCSC105P160X120X35-4N.kicad_mod  QFN50P700X700X60-49N.kicad_mod  TPS62840DLCR.kicad_mod  TRANS_CSD17318Q2T.kicad_mod  XCVR_NN02-101.kicad_mod
parts/step_symbols/: STEP_Symbols.dcm  STEP_Symbols.lib
parts/symbols/: STEP_Symbols.dcm  STEP_Symbols.lib
products/: README.md
products/board-configuration/: .mxproject  Makefile  board-configuration.ioc
products/board-configuration/Core/Inc/: FreeRTOSConfig.h  app_common.h  hw_conf.h  main.h  stm32wbxx_hal_conf.h
products/board-configuration/Core/Src/: app_entry.c  stm32wbxx_hal_timebase_tim.c
products/board-configuration/Drivers/CMSIS/Device/ST/STM32WBxx/Include/: stm32wb30xx.h  stm32wb35xx.h  stm32wb5mxx.h
products/board-configuration/Drivers/STM32WBxx_HAL_Driver/Inc/: stm32wbxx_hal_comp.h  stm32wbxx_hal_conf_template.h  stm32wbxx_hal_irda.h  stm32wbxx_hal_lptim.h  stm32wbxx_hal_pcd.h  stm32wbxx_hal_sai.h  stm32wbxx_hal_sai_ex.h  stm32wbxx_hal_usart.h  stm32wbxx_ll_comp.h  stm32wbxx_ll_lpuart.h  stm32wbxx_ll_usb.h
products/board-configuration/Drivers/STM32WBxx_HAL_Driver/Src/: stm32wbxx_hal_crc_ex.c  stm32wbxx_hal_irda.c  stm32wbxx_hal_lptim.c  stm32wbxx_hal_msp_template.c  stm32wbxx_hal_pcd_ex.c  stm32wbxx_hal_sai_ex.c  stm32wbxx_hal_smartcard.c  stm32wbxx_hal_smbus.c  stm32wbxx_hal_timebase_rtc_wakeup_template.c  stm32wbxx_ll_comp.c  stm32wbxx_ll_exti.c  stm32wbxx_ll_rcc.c  stm32wbxx_ll_tim.c
products/board-configuration/Middlewares/ST/STM32_WPAN/ble/core/: ble_core.h  ble_defs.h  ble_legacy.h
products/board-configuration/Middlewares/ST/STM32_WPAN/ble/core/auto/: ble_gatt_aci.c  ble_hci_le.h  ble_types.h
products/board-configuration/Middlewares/ST/STM32_WPAN/ble/core/template/: compiler.h  osal.c  osal.h
products/board-configuration/Middlewares/ST/STM32_WPAN/ble/svc/Inc/: opus_interface_stm.h
products/board-configuration/Middlewares/ST/STM32_WPAN/ble/svc/Src/: bas.c  bvopus_service_stm.c  crs_stm.c  hids.c  ias.c  mesh.c  motenv_stm.c  p2p_stm.c
products/board-configuration/STM32_WPAN/App/: app_ble.h  ble_conf.h  dis_app.h  hrs_app.c  hrs_app.h
products/ring/: .mxproject  Makefile  ring.ioc  stm32wb55xx_flash_cm4.ld
products/ring/Core/Inc/: app_conf.h  stm32wbxx_it.h
products/ring/Core/Src/: main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
products/ring/Drivers/STM32WBxx_HAL_Driver/Inc/: stm32_assert_template.h  stm32wbxx_hal_smartcard.h  stm32wbxx_hal_smbus.h  stm32wbxx_hal_usart_ex.h  stm32wbxx_ll_adc.h  stm32wbxx_ll_lptim.h  stm32wbxx_ll_tim.h  stm32wbxx_ll_usart.h
products/ring/Drivers/STM32WBxx_HAL_Driver/Src/: stm32wbxx_hal_adc.c  stm32wbxx_hal_comp.c  stm32wbxx_hal_pcd.c  stm32wbxx_hal_pka.c  stm32wbxx_hal_sai.c  stm32wbxx_hal_timebase_rtc_alarm_template.c  stm32wbxx_hal_timebase_tim_template.c  stm32wbxx_hal_usart.c  stm32wbxx_ll_adc.c  stm32wbxx_ll_lptim.c  stm32wbxx_ll_lpuart.c  stm32wbxx_ll_rtc.c  stm32wbxx_ll_usart.c  stm32wbxx_ll_usb.c
products/ring/Middlewares/ST/STM32_WPAN/ble/core/: ble_bufsize.h  ble_std.h
products/ring/STM32_WPAN/App/: app_ble.c  ble_dbg_conf.h  dis_app.c
projects/: README.md
projects/ESP32BLEKeyboardDemo/ButtonController/: ButtonController.ino
projects/ESP32BLEKeyboardDemo/ControllerFirmware/: ControllerFirmware.ino
projects/ESP32BLEKeyboardDemo/JoystickController/: JoystickController.ino
projects/ESP32BLEKeyboardDemo/SendKeyStrokesWithEject/: SendKeyStrokesWithEject.ino
projects/ESP32BLEKeyboardDemo/TestMultiButton/: TestMultiButton.ino
projects/ESP32BLEKeyboardDemo/libraries/ESP32-BLE-Keyboard/: BleKeyboard.cpp  BleKeyboard.h
projects/ESP32BLEKeyboardDemo/libraries/ESP32-BLE-Keyboard/examples/SendKeyStrokes/: SendKeyStrokes.ino
projects/blinky/: CMakeLists.txt
projects/blinky/drivers/CMSIS/Device/ST/STM32WBxx/Include/: stm32wbxx.h
projects/blinky/src/: main.c
projects/bt-demo/: CMakeLists.txt
projects/bt-demo/config/: app_conf.h  ble_dbg_conf.h  tl_dbg_conf.h
projects/bt-demo/inc/: app_ble.h  app_common.h  custom_app.h  custom_stm.h  hw_if.h  main.h  stm32_lpm_if.h  stm32wbxx_it.h  template_server_app.h
projects/bt-demo/src/: app_ble.c  app_entry.c  custom_app.c  custom_stm.c  hw_timerserver.c  hw_uart.c  main.c  stm32wbxx_it.c
projects/button/config/: app_conf.h  ble_conf.h  stm32wbxx_hal_conf.h  utilities_conf.h
projects/button/inc/: app_debug.h  app_entry.h  custom_app.h  custom_stm.h  hw_conf.h  main.h  stm32wbxx_it.h
projects/button/src/: app_ble.c  app_debug.c  custom_app.c  custom_stm.c  hw_ipcc.c  main.c  stm32_lpm_if.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
projects/deterioration_modeling/: deteriorate.py
projects/ring/: ring-cache.lib  ring.kicad_pcb  ring.pro  ring.sch  ring.step
projects/ring/gbr/: ring-B_Cu.gbr  ring-B_Mask.gbr  ring-B_Paste.gbr  ring-B_SilkS.gbr  ring-Edge_Cuts.gbr  ring-F_Cu.gbr  ring-F_Mask.gbr  ring-F_Paste.gbr  ring-F_SilkS.gbr  ring-In1_Cu.gbr  ring-In2_Cu.gbr  ring-NPTH.drl  ring-PTH.drl  ring-job.gbrjob
projects/rtos-demo/: CMakeLists.txt  README.md
(+33 files in other folders)
